--- a/public/config/config.json
+++ b/public/config/config.json
@@ -1,13 +1,13 @@
 {
-  "CONTRACT_ADDRESS": "0x6144d47ecbbc9e66961d7a9bce915b2dfea8669f",
-  "SCAN_LINK": "https://etherscan.com/token/0x6144d47ecbbc9e66961d7a9bce915b2dfea8669f",
+  "CONTRACT_ADDRESS": "0x0f717121f8e3958a24f29868226a08c3f631be77",
+  "SCAN_LINK": "https://etherscan.com/token/0x0f717121f8e3958a24f29868226a08c3f631be77",
   "NETWORK": {
     "NAME": "Ethereum",
     "SYMBOL": "ETH",
-    "ID": 3
+    "ID": 1
   },
   "NFT_NAME": "Bored Apes Fan Club",
-  "SYMBOL": "TBAFCR",
+  "SYMBOL": "BAFC",
   "MAX_SUPPLY": 10000,
   "WEI_COST": 10000000000000000,
   "DISPLAY_COST": 0.01,
