--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
+    "react-styled-carousel": "^0.5.1",
     "react-table": "^7.7.0",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
